# discord-undoc-types

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
src/: gateway.json  main.rs
src/enums/: activity.json  intents.json
src/types/: gateway.json
types/enums/: application.json  channel.json  client_status.json  gateway.json  intents.json  message.json  opcodes.json  status_types.json
types/types/: application.json  channel.json  gateway.json  message.json  user.json
