[package]
name = "discord-undoc-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive", "cargo"] }
glob = "0.3.0"
regex = "1.5.5"
serde_json = "1.0"
